--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,13 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
+  "engines": {
+    "node": "22.17.0"
+  },
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
@@ -18,6 +22,9 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "mongoose": "^8.19.1",
+    "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
